chamou o css para entrar no html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html>
  <html lang="pt-br">
 <meta charset="utf-8"
+<link rel="stylesheet" href="style.css">
  <h1>Praia</h1
      <p> <strong> praia me transmite paz </strong> sensação única de vários sentimentos em um só, observar o sol nascer é melhor parte do dia.
      Gosto muito de levantar cedo para caminhar sentindo a brisa do mar ouvindo os barulhos das ondas </p>
